--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,8 @@ gap:30px;
     background-color: var(--title-backround-color);
 
     width: 1600px;
-     margin-bottom: 80px;
+    display: block;
+    align-items: center;
 }
 
 
@@ -104,8 +105,7 @@ gap:30px;
         font-size: 26px;
         line-height: 1.2;
         letter-spacing: 0.03em;
-          
-   }
+      }
 
 
 
@@ -117,10 +117,6 @@ gap:30px;
     margin-top: 30px;
     flex-basis: calc((100-3*30)/3);
 }
-
-
-
-
 
 
 
@@ -145,7 +141,6 @@ gap:30px;
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #757575;
-
    
 
 }
@@ -223,7 +218,7 @@ gap:30px;
 .button-service{
      width: 200px;
      height: 50px;
-     margin: 20px 700px 200px 700px;
+     margin: 20px 700px 200px 700px;  
 
     font-weight: 700;
     font-size: 16px;
