--- a/css/styles.css
+++ b/css/styles.css
@@ -202,8 +202,11 @@ gap:30px;
 
 .title{
       width: 696px;
-      padding: 200px  452px 280px;
-      margin: 20px;
+      padding: 200px  452px 40px;
+      margin: 15px;
+     flex-shrink: 0;
+
+
      font-weight: 900;
      font-size: 44px;
      line-height: 1.4;
@@ -218,7 +221,8 @@ gap:30px;
 .button-service{
      width: 200px;
      height: 50px;
-     margin: 20px 700px 200px 700px;  
+     margin:15px 724px 200px 724px;  
+     flex-shrink: 0;
 
     font-weight: 700;
     font-size: 16px;
@@ -293,7 +297,7 @@ gap:30px;
 .work{
     width: 1600px;
     margin-bottom: 25px;
-
+    margin-top: 94px;
 
      font-weight: 700;
      font-size: 36px;
@@ -349,14 +353,16 @@ margin: 15px;
 }
 .list-foto{
 width: 370px;
-padding-left: 15px;
+padding: 15px 15px 0px;
+margin-top: 25px;
+
 
 }
 
 .foto-work{
 width: 270px;
-padding: 15px;;
-
+padding: 25px 15px 0px;
+margin-bottom: 94px;
 }
 
 .address-nov{
