--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ h1,h2,h3,h4,h5,h6,ul,p{
 .heder{
     
     background-color: var(--accent-backround-color);
-     
+   
 }
 
 .heder-content{
@@ -81,13 +81,8 @@ gap:30px;
 
   }
 
-
-
-
-
 .men-title{
     background-color: var(--title-backround-color);
-
     width: 1600px;
     display: block;
     align-items: center;
@@ -106,10 +101,6 @@ gap:30px;
         line-height: 1.2;
         letter-spacing: 0.03em;
       }
-
-
-
-
 
 .list-card{
    display:flex;
@@ -162,8 +153,7 @@ gap:30px;
     display: flex;
     flex-wrap: wrap;
     
-    
-    
+      
 }
 
 .nav-list{
@@ -172,7 +162,6 @@ gap:30px;
         line-height: 1.1;
         letter-spacing: 0.02em;
         color: var(--prinory-text-color);
-
         padding-right: 30px;
 }
 
@@ -202,10 +191,9 @@ gap:30px;
 
 .title{
       width: 696px;
-      padding: 200px  452px 40px;
+      padding: 185px  447px 35px;
       margin: 15px;
      flex-shrink: 0;
-
 
      font-weight: 900;
      font-size: 44px;
@@ -270,9 +258,6 @@ gap:30px;
 
 
 
-
-
-
 .list-portfolio{
     text-decoration:none ;
     list-style: none;
@@ -308,11 +293,11 @@ gap:30px;
     
 }
 .list-services{
- width: 270;
-list-style: none;
-display: flex;
-flex-wrap: nowrap;
-margin: 15px;
+      width: 270;
+      list-style: none;
+      display: flex;
+      flex-wrap: nowrap;
+      margin: 15px;
 }
 
 .list-comanda{
@@ -325,9 +310,6 @@ margin: 15px;
 
 .tem{
     background-color: var(--prinory-backround-color);
-
-
-
 
 }
 
@@ -350,19 +332,27 @@ margin: 15px;
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--accent-color);
+
+    border-radius: 0px 0px 4px 4px;
+  
+
+
+
+
+
 }
 .list-foto{
-width: 370px;
-padding: 15px 15px 0px;
-margin-top: 25px;
+     width: 370px;
+     padding: 15px 15px 0px;
+     margin-top: 25px;
 
 
 }
 
 .foto-work{
-width: 270px;
-padding: 25px 15px 0px;
-margin-bottom: 94px;
+    width: 270px;
+   padding: 25px 15px 0px;
+   margin-bottom: 94px;
 }
 
 .address-nov{
@@ -374,7 +364,7 @@ margin-bottom: 94px;
         color: var(--tetriory-color);
 }
 footer{ 
-    
+    width: 1600px;
     background-color: var(--title-backround-color);
     color: var(--tetriory-color);
 }
