--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,9 @@ gap:30px;
    display:flex;
     margin-left: 30px;
     margin-top: 30px;
-    flex-basis: calc((100-3*30)/3);
+    flex-basis: calc((100%-60)/3);
+    
+
 }
 
 
