--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,12 @@ gap: 30px;
     background-color: var(--prinory-backround-color);
 
 
+    display: flex;
+    justify-content: center;
+
+    gap: 4px;
+    border-radius: 4px;
+
 }
 
 .list-button:hover,
