--- a/css/styles.css
+++ b/css/styles.css
@@ -76,18 +76,30 @@ list-style: none;
 display:flex;
 align-items: center;
 margin-left: auto;
-gap: 30px;
+gap: 50px;
 
 
   }
 
 .men-title{
     background-color: var(--title-backround-color);
-    width: 1600px;
-    display: block;
-    align-items: center;
+     text-align: center;
+     align-items: center;
+     padding-top: 94px ;
+     padding-left: 94px;
 }
+.title {
 
+    margin-bottom: 30px;
+     
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.4;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--tetriory-color);
+}
 
 
 .link{
@@ -107,7 +119,7 @@ gap: 30px;
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc((100%-60)/3);
-    
+
 
 }
 
@@ -117,6 +129,8 @@ gap: 30px;
     text-decoration: none;
      color:var(--prinory-text-color);
 
+
+     display: block;
 
      padding-top: 32px;
      padding-bottom: 32px;
@@ -129,7 +143,7 @@ gap: 30px;
 }
 .link-list.current{
     color: var(--accent-lin-color);
-
+    display: block;
 
     padding-top: 32px;
     padding-bottom:32px;
@@ -142,6 +156,8 @@ gap: 30px;
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #757575;
+
+    display: block;
    
 
 }
@@ -160,11 +176,11 @@ gap: 30px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--prinory-text-color);
-
+    gap: 50px; ;
 
     margin-left: auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:nowrap;
     
       
 }
@@ -175,7 +191,6 @@ gap: 30px;
         line-height: 1.1;
         letter-spacing: 0.02em;
         color: var(--prinory-text-color);
-
 
         margin: 30px;
 }
@@ -189,7 +204,7 @@ gap: 30px;
     letter-spacing: 0.02em;
     color: var(--accent-color);
 
-    margin-left: 40px;
+    
 }
 
 .mail:hover,
@@ -206,29 +221,13 @@ gap: 30px;
     color: var(--accent-color);
 }
 
-.title{
-      width: 696px;
-      padding: 185px  447px 35px;
-      margin: 15px;
-     flex-shrink: 0;
-
-     font-weight: 900;
-     font-size: 44px;
-     line-height: 1.4;
-     text-align: center;
-     letter-spacing: 0.06em;
-     text-transform: uppercase;
-     color: var(--tetriory-color);
-}
 
 
 
 .button-service{
-     width: 200px;
-     height: 50px;
-     margin:15px 724px 200px 724px;  
-     flex-shrink: 0;
-
+   
+     display: block;
+     margin: auto;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
@@ -244,12 +243,8 @@ gap: 30px;
     letter-spacing: 0.03em;
     color: var(--prinory-text-color);
     background-color: var(--prinory-backround-color);
-
-
-    display: flex;
-    justify-content: center;
-
-    gap: 4px;
+   
+    gap: 8px;
     border-radius: 4px;
 
 }
@@ -287,6 +282,8 @@ gap: 30px;
     text-decoration:none ;
     list-style: none;
 
+
+    
 }
  
 .list-porf {
@@ -307,7 +304,7 @@ gap: 30px;
 .work{
     width: 1200px;
     margin-bottom: 25px;
-    margin-top: 94px;
+
     
 
      font-weight: 700;
@@ -319,11 +316,15 @@ gap: 30px;
     
 }
 .list-services{
-      width: 270;
+    
       list-style: none;
       display: flex;
       flex-wrap: nowrap;
-      margin: 15px;
+
+      margin-bottom: 10px;
+
+
+      gap: 30px;
 }
 
 .list-comanda{
@@ -344,7 +345,7 @@ gap: 30px;
 }
 
 
-.section{
+.container{
    width: 1200px;
    padding-left: 15px;
    padding-right: 15px;
@@ -352,7 +353,10 @@ gap: 30px;
    margin-right: auto;
 }
 
-
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 
 
@@ -374,8 +378,10 @@ gap: 30px;
 }
 .list-foto{
      width: 370px;
-     padding: 15px 15px 0px;
      margin-top: 25px;
+    
+     
+
 
 
 }
@@ -383,7 +389,7 @@ gap: 30px;
 .foto-work{
     width: 270px;
    padding: 25px 15px 0px;
-   margin-bottom: 94px;
+  
 }
 
 .address-nov{
