--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,6 @@ body{
     font-family:'Roboto',sans-serif;
     color: var(--prinory-text-color);
      font-style: normal;
-
-
      line-height: 1.5;
      
 }
@@ -56,18 +54,14 @@ h1,h2,h3,h4,h5,h6,ul,p{
 .heder-content{
 
     display: flex;
-    align-items: stretch;
-     
+       
 }
-
-
 
 
 
 .heder-list{
 display:flex;
 align-items: center;
-
 
 }
 
@@ -93,7 +87,7 @@ gap: 50px;
     margin-left: auto;
     margin-right: auto;
     max-width: 696px;
-    
+    margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.4;
@@ -115,13 +109,30 @@ gap: 50px;
         line-height: 1.2;
         letter-spacing: 0.03em;
       }
+.list-image {
+        list-style: none;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: var(--prinory-text-color);
+        
+        
+        margin-left: -30px;
+        margin-bottom: -30px;
+        display: flex;
+        flex-wrap: wrap;
+}
+
+
 
 .list-card{
-    display:flex;
-    padding-top: 56px;
-    flex-basis: calc((100%-60)/3);
-    width: 370px;
-
+    
+    margin-left:  30px;
+    margin-bottom: 30px;
+    flex-basis: calc(100%/3-30);
+     
+    
 }
 
 
@@ -185,6 +196,28 @@ gap: 50px;
     
       
 }
+.list-menu{
+    list-style: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--prinory-text-color);
+    gap: 8px;
+
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom:56px;
+}
+
+.text {
+padding:20px 24px ;
+}
+
+
+
+
 
 .comanda-list {
     list-style: none;
@@ -285,7 +318,7 @@ gap: 50px;
     text-transform: uppercase;
     color: var(--prinory-text-color);
 
-    margin: bottom 10px; ;
+    margin-bottom:10px; 
 
 
 
@@ -297,16 +330,18 @@ gap: 50px;
     letter-spacing: 0.03em;
     color: var(--accent-color);
 }
-
+img{
+    display: block;
+}
 
 
 
 .list-portfolio{
     text-decoration:none ;
     list-style: none;
-    
+    width: 370px;
     display: block;
-
+    
     
 }
  
@@ -369,7 +404,10 @@ gap: 50px;
 .services{
     width: 270px;
 }
-
+.comanda{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
 .list-comanda{
   font-weight: 500; 
@@ -377,11 +415,8 @@ gap: 50px;
   line-height: 1.2;
   letter-spacing: 0.03em;
    color: var(--prinory-text-color);
-
-   padding-top: 30px;
-   padding-bottom: 30px;
-  
-
+   margin-bottom: 10px;
+   
    text-align: center;
 
 }
@@ -399,6 +434,11 @@ gap: 50px;
    margin-left: auto;
    margin-right: auto;
 }
+
+
+
+
+
 
 .section{
     padding-top: 94px;
@@ -427,18 +467,14 @@ gap: 50px;
 }
 .list-foto{
      width: 370px;
-     display: block;
+
     
-     
-
-
-
-}
+ }
+ 
 
 .foto-work{
     width: 270px;
-    display: block;
-   
+     margin-bottom:30px;
   
 }
 
@@ -449,11 +485,14 @@ gap: 50px;
         line-height: 1.7;
         letter-spacing: 0.03em;
         color: var(--tetriory-color);
+        margin-top: 28px;
 }
 footer{ 
-    width: 1600px;
+   
     background-color: var(--title-backround-color);
     color: var(--tetriory-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .port-footer{
     color: var(--tetriory-color);
@@ -467,4 +506,9 @@ footer{
         line-height: 1.7;
         letter-spacing: 0.03em;
         color: rgba(255, 255, 255, 0.6);
+        margin-top: 12px;
+
+
+        display: flex;
+        flex-direction: column;
 }
